Add PUT requests for demo API in test_updates.http
Added numerous PUT requests to test_updates.http to update the demo API with various values for "demoId" 001. Each request modifies the "value" field from 9 through 20 in increments.